# flint

./: .env.example  .gitignore  COMMERCIAL.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/: flint-loop-state.json
.cursor/rules/: flint-audio.mdc  flint-core.mdc  flint-data.mdc  flint-git-workflow.mdc  flint-performance.mdc  flint-rust.mdc  flint-security.mdc  flint-testing.mdc  flint-typescript.mdc
.github/: PHASE7_REVIEW_PROMPT.md
.github/workflows/: bench.yml  ci.yml  coverage.yml  eval-prompts.yml
docs/: ROADMAP.md  STRATEGY_B_INTEGRATION_PLAN.md
evals/: Cargo.toml  README.md  baseline.json
evals/questions/: finance.json  marketing.json  operations.json  product_management.json  sales.json  software_engineering.json  universal.json
evals/src/: bank.rs  baseline.rs  error.rs  gate.rs  judge.rs  lib.rs  main.rs  metrics.rs  report.rs  runner.rs
knowledge/algorithms/: core.txt
knowledge/behavioral/: core.txt
knowledge/design_patterns/: core.txt
knowledge/frontend/: core.txt
knowledge/ml_platform/: core.txt
knowledge/system_design/: core.txt
knowledge/web_backend/: core.txt
prompts/clarifying/: llama.txt
prompts/compression/: default.txt
prompts/depth/: default.txt
prompts/digest/: default.txt
prompts/directional/: default.txt  openai.txt
prompts/mock_coach/: default.txt
prompts/mock_followup/: default.txt
prompts/mock_suggested/: default.txt
prompts/question_detection/: llama.txt
prompts/research/: rag_only.txt  web_synthesis.txt
prompts/session_essence/: claude.txt  default.txt  gpt.txt  llama.txt
public/: oauth-callback.html
scripts/: check-coverage-gates.sh  cleanup-pipewire-loopback.sh  cleanup-whisper-cmake-cache.ps1  flint-deeplink-handler.sh  install-linux-deps.sh  install-macos-deps.sh  install-whisper-model.sh  install-windows-deps.ps1  register-flint-deeplink-linux.sh  resize-extension-icons.py  seed_global_question_bank.py  setup-pipewire-aec.sh  windows-prepare-tests.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: confidence_scoring.rs  orchestrator_ttft.rs  prompt_loading.rs  question_detection.rs  rag_retrieval.rs  rnnoise_frame.rs
src-tauri/capabilities/: default.json
src-tauri/resources/calibration/: mic_paragraph.txt  system_clip.txt
src-tauri/src/: auth_session.rs  commands.rs  confidence.rs  cost.rs  deep_link.rs  digest.rs  dto.rs  events.rs  flags.rs  gdpr.rs  global_bank.rs  hotkeys.rs  keychain.rs  lib.rs  main.rs  smart_resume.rs  state.rs  stealth.rs
src-tauri/src/audio/: audit.rs  capture.rs  diarizer.rs  mod.rs  pipeline.rs  rnnoise.rs  vad.rs  watchdog.rs
src-tauri/src/calibration/: device.rs  metrics.rs  mod.rs  runner.rs  text.rs
src-tauri/src/health/: checks.rs  hardware.rs  headphone_gate.rs  mod.rs
src-tauri/src/interfaces/: auth.rs  mock_auth.rs  mod.rs  session.rs  vector.rs  web_search.rs
src-tauri/src/knowledge/: loader.rs  mod.rs  packs.rs
src-tauri/src/llm/: anthropic.rs  deepseek.rs  failover.rs  groq.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs  provider.rs  rate_limiter.rs  stack.rs
src-tauri/src/mock/: audio_writer.rs  coach.rs  conductor.rs  context.rs  echo.rs  mic_capture.rs  mod.rs  rag.rs  transcript.rs  tts.rs  turn_phase.rs
src-tauri/src/orchestrator/: clarifying.rs  depth.rs  directional.rs  mod.rs  prewarm.rs
src-tauri/src/rag/: chunker.rs  embedder.rs  mod.rs  retriever.rs  store.rs
src-tauri/src/research/: mod.rs  tavily.rs
src-tauri/src/session/: draft.rs  limits.rs  memory.rs  mod.rs  persistence.rs  question_attempts.rs  question_bank.rs  recovery.rs  shuffle.rs  state.rs
src-tauri/src/supabase/: auth.rs  config.rs  mod.rs  oauth.rs  session.rs
src-tauri/src/transcription/: detector.rs  engine.rs  hybrid.rs  mod.rs  prompt.rs  rolling_context.rs  sanitizer.rs  speaker_suspicion.rs  wer.rs
src-tauri/tests/integration/: audio_pipeline.rs  cold_start.rs  crash_recovery.rs  feature_flags.rs  gdpr.rs  headphone_gate.rs  llm_providers.rs  orchestrator.rs  rag_dual_store.rs  rag_pipeline.rs  smart_resume_import.rs
src/assets/: README.md
src/commands/: index.ts
src/components/: AddContextPanel.tsx  FirstRunRehearsalModal.tsx  LiveSessionStatusBar.test.tsx  LiveSessionStatusBar.tsx  MicQualityBadge.tsx  MockSaveForLiveModal.test.tsx  MockSaveForLiveModal.tsx  OverlayLayout.test.tsx  OverlayLayout.tsx  PanicRestoreShell.tsx  PreferredAnswerPanel.tsx  PrepChecklist.tsx  QuestionBank.tsx  ResearchChat.tsx  SessionContextBadges.tsx  SmartResumeLinkImport.css  SmartResumeLinkImport.tsx  SpeakerPicker.tsx  StoryEditor.tsx  TitleBar.css  TitleBar.tsx  TokenBudgetIndicator.tsx  UsageWidget.tsx  WaylandCaptureHint.test.tsx  WaylandCaptureHint.tsx  WindowResizeGrip.css  WindowResizeGrip.tsx  rehearsal-enrichment.css
src/events/: index.ts
src/hooks/: useAudioRoutingWarning.ts  useCostCap.ts  useDepthStream.ts  useDirectionalStream.ts  useFeatureFlag.test.ts  useFeatureFlag.ts  useHotkeys.ts  useLiveAudioWarning.ts  useOrchestratorStreams.ts  useRagChunks.ts  useTokenUsage.ts  useTranscriptionStream.ts  useUiZoom.ts
src/lib/: contextQuality.ts  digestPlaceholder.ts  shufflePreference.ts  smartResumeImport.test.ts  smartResumeImport.ts  uiZoomPreference.test.ts  uiZoomPreference.ts
src/panels/: ClarifyingPanel.tsx  CoachPanel.test.tsx  CoachPanel.tsx  ContextPanel.tsx  DepthPanel.tsx  DirectionalPanel.tsx  SuggestedAnswerPanel.tsx  TranscriptPanel.test.tsx  TranscriptPanel.tsx  TurnCards.tsx
src/screens/: DigestReview.css  DigestReview.tsx  HealthCheck.css  HealthCheck.test.tsx  HealthCheck.tsx  LiveOverlay.headphoneGate.test.tsx  LiveOverlay.tsx  MicCalibration.test.tsx  MicCalibration.tsx  MockInterview.tsx  MockSummary.css  MockSummary.tsx  Onboarding.css  Onboarding.test.tsx  Onboarding.tsx  ProviderSettings.tsx  Recovery.tsx  Rehearsal.tsx  SessionDesign.css  SessionDesign.tsx  SessionFocusGate.tsx  SessionList.css  SessionList.test.tsx  SessionList.tsx  (+4 more)
supabase/: config.toml  seed.sql
(+27 files in other folders)
